- Fixed bug #44769 (declaring private magic methods should throw error)