tests/classes/__call_005.phpt
@@ -21,16 +21,5 @@ class B extends A {
 $b = new B();
 $b->test();
 ?>
---EXPECT--
-In A::__call(test1, array(1,a))
-object(B)#1 (0) {
-}
-In A::__call(test2, array(1,a))
-object(B)#1 (0) {
-}
-In A::__call(test3, array(1,a))
-object(B)#1 (0) {
-}
-In A::__call(test4, array(1,a))
-object(B)#1 (0) {
-}
+--EXPECTF--
+Fatal error: The magic method __call() must have public visibility and can not be static in %s on line %d
